--- a/calc.scss
+++ b/calc.scss
@@ -1,5 +1,6 @@
 .container{
-    background-color: black;
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%); 
     width:100%;
     height:100% ;
     display: flex;
@@ -9,9 +10,13 @@
     
 }
 input{
-    width: 100%;
+    width: 98%;
     height: 50px;
     font-size: 25px;
+    color:blanchedalmond;
+    background-color: black;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .calc {
@@ -27,5 +32,8 @@ button{
     height: 100px;
     text-align: center;
     font-size: 30px;
+}
+#equals{
+    width:100%;
 }
 
