--- a/calc.scss
+++ b/calc.scss
@@ -6,15 +6,20 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
-
-    
 }
+
+.calculator{
+    width: 400px;
+
+}
+
 .input{
     border: 1px solid blanchedalmond;
     display: block;
     width: 98%;
     max-width: 98%;
-    height: 75px;
+    min-height: 75px;
+    max-height: 100px;
     font-size: 2.5rem;
     color:blanchedalmond;
     background-color: black;
@@ -22,6 +27,8 @@
     word-break: break-all;
     padding-top: 2px;
 }
+
+
 
 .calc {
 
