--- a/calc.scss
+++ b/calc.scss
@@ -1,23 +1,33 @@
+.body{
+   height: 750px;
+    padding: 0;
+    margin: 0;
+}
+
 .container{
-    background: rgb(238,174,202);
-    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%); 
+    // background: rgb(238,174,202);
+    // background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%); 
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(16,16,114,1) 38%, rgba(49,150,170,1) 100%);
     width:100%;
-    height:100% ;
+    height:100%;
     display: flex;
-    justify-content: center;
-    flex-direction: row;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
 
 .calculator{
     width: 400px;
+   
 
 }
 
 .input{
     border: 1px solid blanchedalmond;
     display: block;
-    width: 98%;
-    max-width: 98%;
+    width: 100%;
+    max-width: 100%;
     min-height: 75px;
     max-height: 100px;
     font-size: 2.5rem;
@@ -26,6 +36,7 @@
     word-wrap: break-word;
     word-break: break-all;
     padding-top: 2px;
+    padding-left: 1px;
 }
 
 
@@ -33,8 +44,7 @@
 .calc {
 
     table-layout: fixed;
-    margin-top: 60px;
-    margin-bottom: 60px;
+ 
 
 
 }
